--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         width: 350px;
         height: 350px;
         /* background-color: black; */
-        border: 1px solid rgba(0, 0, 0, 0.65);
+        /* border: 1px solid rgba(0, 0, 0, 0.65); */
         /* border-radius: 10px; */
         position: relative;
         margin: 0 auto;
@@ -15,21 +15,27 @@
         width: 50px;
         height: 50px;
         float: left;
-      }
-      .dark {
-        background-color: rgba(0, 0, 0, 0.25);
         text-align: center;
         vertical-align: middle;
         display: inline-block;
         outline: 1px solid black;
       }
+      .dark {
+        background-color: rgba(0, 0, 0, 0.15);
+        text-align: center;
+        vertical-align: middle;
+        display: inline-block;
+        /* outline: 1px solid black; */
+      }
       .light {
-        background-color: rgba(255, 255, 255, 0.25);
+        background-color: rgba(255, 255, 255, 0.15);
         text-align: center;
         vertical-align: middle;
         display: inline-block;
       }
-
+      .no-outline {
+        outline: 0px;
+      }
       .checker {
         width: 40px;
         height: 40px;
@@ -46,27 +52,27 @@
   </head>
   <body>
     <div id="checker-board">
-      <div class="light square"></div>
-      <div class="dark square">
+      <div class="no-outline square"></div>
+      <div class="square">
         <p>1</p>
       </div>
-      <div class="light square">
+      <div class="square">
         <p>2</p>
       </div>
-      <div class="dark square">
+      <div class="square">
         <p>3</p>
       </div>
-      <div class="light square">
+      <div class="square">
         <p>4</p>
       </div>
-      <div class="dark square">
+      <div class="square">
         <p>5</p>
       </div>
-      <div class="light square">
+      <div class="square">
         <p>6</p>
       </div>
 
-      <div class="dark square">
+      <div class="square">
         <p>A</p>
       </div>
       <div class="light square"></div>
@@ -76,7 +82,7 @@
       <div class="light square"></div>
       <div class="dark square"></div>
 
-      <div class="light square">
+      <div class="square">
         <p>B</p>
       </div>
       <div class="dark square"></div>
@@ -86,7 +92,7 @@
       <div class="dark square"></div>
       <div class="light square"></div>
 
-      <div class="dark square">
+      <div class="square">
         <p>C</p>
       </div>
       <div class="light square"></div>
@@ -96,7 +102,7 @@
       <div class="light square"></div>
       <div class="dark square"></div>
 
-      <div class="light square">
+      <div class="square">
         <p>D</p>
       </div>
       <div class="dark square"></div>
@@ -106,7 +112,7 @@
       <div class="dark square"></div>
       <div class="light square"></div>
 
-      <div class="dark square">
+      <div class="square">
         <p>E</p>
       </div>
       <div class="light square"></div>
@@ -116,7 +122,7 @@
       <div class="light square"></div>
       <div class="dark square"></div>
 
-      <div class="light square">
+      <div class="square">
         <p>F</p>
       </div>
       <div class="dark square"></div>
@@ -125,34 +131,9 @@
       <div class="light square"></div>
       <div class="dark square"></div>
       <div class="light square"></div>
-
-      <!-- <div class="black checker" id="black-checker-1"></div>
-      <div class="black checker" id="black-checker-2"></div>
-      <div class="black checker" id="black-checker-3"></div>
-      <div class="black checker" id="black-checker-4"></div>
-      <div class="black checker" id="black-checker-5"></div>
-      <div class="black checker" id="black-checker-6"></div>
-      <div class="black checker" id="black-checker-7"></div>
-      <div class="black checker" id="black-checker-8"></div>
-      <div class="black checker" id="black-checker-9"></div>
-      <div class="black checker" id="black-checker-10"></div>
-      <div class="black checker" id="black-checker-11"></div>
-      <div class="black checker" id="black-checker-12"></div>
-      <div class="red checker" id="red-checker-1"></div>
-      <div class="red checker" id="red-checker-2"></div>
-      <div class="red checker" id="red-checker-3"></div>
-      <div class="red checker" id="red-checker-4"></div>
-      <div class="red checker" id="red-checker-5"></div>
-      <div class="red checker" id="red-checker-6"></div>
-      <div class="red checker" id="red-checker-7"></div>
-      <div class="red checker" id="red-checker-8"></div>
-      <div class="red checker" id="red-checker-9"></div>
-      <div class="red checker" id="red-checker-10"></div>
-      <div class="red checker" id="red-checker-11"></div>
-      <div class="red checker" id="red-checker-12"></div> -->
     </div>
 
-    <!-- <script>
+    <script>
       "use strict";
 
       var board = document.getElementById("checker-board");
@@ -175,6 +156,6 @@
         redCheckers.push(redChecker);
         blackCheckers.push(blackChecker);
       }
-    </script> -->
+    </script>
   </body>
 </html>
