fixed index.html to incorporate script

--- a/index.html
+++ b/index.html
@@ -1,161 +1,9 @@
 <html>
   <head>
-    <style>
-      #checker-board {
-        width: 350px;
-        height: 350px;
-        /* background-color: black; */
-        /* border: 1px solid rgba(0, 0, 0, 0.65); */
-        /* border-radius: 10px; */
-        position: relative;
-        margin: 0 auto;
-      }
-
-      .square {
-        width: 50px;
-        height: 50px;
-        float: left;
-        text-align: center;
-        vertical-align: middle;
-        display: inline-block;
-        outline: 1px solid black;
-      }
-      .dark {
-        background-color: rgba(0, 0, 0, 0.15);
-        text-align: center;
-        vertical-align: middle;
-        display: inline-block;
-        /* outline: 1px solid black; */
-      }
-      .light {
-        background-color: rgba(255, 255, 255, 0.15);
-        text-align: center;
-        vertical-align: middle;
-        display: inline-block;
-      }
-      .no-outline {
-        outline: 0px;
-      }
-      .checker {
-        width: 40px;
-        height: 40px;
-        border-radius: 20px;
-        position: absolute;
-      }
-      .red {
-        background-color: red;
-      }
-      .black {
-        background-color: black;
-      }
-    </style>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div id="checker-board">
-      <div class="no-outline square"></div>
-      <div class="square">
-        <p>1</p>
-      </div>
-      <div class="square">
-        <p>2</p>
-      </div>
-      <div class="square">
-        <p>3</p>
-      </div>
-      <div class="square">
-        <p>4</p>
-      </div>
-      <div class="square">
-        <p>5</p>
-      </div>
-      <div class="square">
-        <p>6</p>
-      </div>
-
-      <div class="square">
-        <p>A</p>
-      </div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-
-      <div class="square">
-        <p>B</p>
-      </div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-
-      <div class="square">
-        <p>C</p>
-      </div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-
-      <div class="square">
-        <p>D</p>
-      </div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-
-      <div class="square">
-        <p>E</p>
-      </div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-
-      <div class="square">
-        <p>F</p>
-      </div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-      <div class="dark square"></div>
-      <div class="light square"></div>
-    </div>
-
-    <script>
-      "use strict";
-
-      var board = document.getElementById("checker-board");
-      var redCheckers = [];
-      var blackCheckers = [];
-
-      for (var i = 1; i <= 12; i = i + 1) {
-        var redChecker = document.getElementById("red-checker-" + i);
-        var blackChecker = document.getElementById("black-checker-" + i);
-
-        var col = (i - 1) % 4;
-        var row = Math.floor((i - 1) / 4);
-
-        redChecker.style.top = 50 + 50 * row - 45;
-        redChecker.style.left = 100 + 100 * col - 95 + (row === 1 ? 50 : 0);
-
-        blackChecker.style.top = 310 - (50 * row - 45);
-        blackChecker.style.left = 100 + 100 * col - 95 + (row !== 1 ? 50 : 0);
-
-        redCheckers.push(redChecker);
-        blackCheckers.push(blackChecker);
-      }
-    </script>
+    <div id="checker-board"></div>
   </body>
+  <script src="app.js"></script>
 </html>
